Actions
Bug #10660
closedswrand: NULL pointer errors
Start date:
2019-04-01
Due date:
% Done:
100%
Estimated time:
Difficulty:
Medium
Tags:
Gerrit CR:
Description
Build errors with NULL pointer:
../../common/sys/null.h:32:14: error: initialization makes integer from pointer without a cast [-Werror=int-conversion] #define NULL ((void *)0) ^ ../../common/crypto/io/swrand.c:104:58: note: in expansion of macro 'NULL' static crypto_kcf_provider_handle_t swrand_prov_handle = NULL; ^~~~ cc1: all warnings being treated as errors
Updated by Electric Monk about 3 years ago
- Status changed from In Progress to Closed
- % Done changed from 90 to 100
git commit 64a6bd963243a20fc11b593b7bec96ea000f8bf6
commit 64a6bd963243a20fc11b593b7bec96ea000f8bf6 Author: Toomas Soome <tsoome@me.com> Date: 2019-04-10T06:16:10.000Z 10660 swrand: NULL pointer errors Reviewed by: Gergő Doma <domag02@gmail.com> Reviewed by: Andy Stormont <astormont@racktopsystems.com> Reviewed by: Jason Lippert <jason@glasspelican.ca> Approved by: Dan McDonald <danmcd@joyent.com>
Actions