10660 swrand: NULL pointer errors Reviewed by: Gergő Doma <domag02@gmail.com> Reviewed by: Andy Stormont <astormont@racktopsystems.com> Reviewed by: Jason Lippert <jason@glasspelican.ca> Approved by: Dan McDonald <danmcd@joyent.com>